tests/snapshots/execution_spec__cache-control.md_assert_2.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "cache-control": "no-cache"
  },
  "body": {
    "data": {
      "u1": {
        "id": 1
      },
      "u4": {
        "id": 4
      }
    }
  }
}
