tests/snapshots/execution_spec__cache-control.md_assert_3.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "cache-control": "no-cache, private"
  },
  "body": {
    "data": {
      "u3": {
        "id": 3
      },
      "u4": {
        "id": 4
      }
    }
  }
}
