tests/snapshots/execution_spec__cache-control.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(headers: {cacheControl: true}) {
  query: Query
}

type Query {
  user(id: Int): User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users", query: [{key: "id", value: "{{args.id}}"}])
}

type User {
  id: Int
  name: String
}
