tests/snapshots/execution_spec__cache-control.md_test_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "cache-control": "max-age=3600, private",
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "u1": {
        "id": 1
      },
      "u3": {
        "id": 3
      }
    }
  }
}
