tests/snapshots/execution_spec__caching-collision.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  foo: Foo
  id: String!
}

scalar Date

scalar Email

type Foo {
  id: Int!
}

scalar JSON

scalar PhoneNumber

type Query {
  bars: [Bar]
}

scalar Url

schema {
  query: Query
}
